# voxi

./: .gitignore  BUILD_STATUS.md  IMPLEMENTATION_PLAN.md  Makefile  PR_REPORT.md  README.md  go.mod  prd.md  pyproject.toml  trd.md
client/: voxi-toggle.py
cmd/voxi/: main.go  main_test.go
docs/: daemon.md
internal/audio/: pwrecord.go  pwrecord_test.go  recorder.go
internal/config/: config.go  config_test.go
internal/daemon/: errors.go  errors_test.go  service.go  service_test.go
internal/doctor/: doctor.go  doctor_test.go
internal/integration/: daemon_flow_test.go
internal/ipc/: client.go  protocol.go  server.go  server_test.go
internal/logging/: logger.go
internal/output/: clipboard.go  inserter.go  notify.go
internal/state/: machine.go  machine_test.go
internal/worker/: client.go  supervisor.go  supervisor_test.go
internal/xruntime/: paths.go
scripts/: fix_nvidia_suspend.sh  install.sh  setup.sh
src/: audio.py  daemon.py  notify.py  transcriber.py
systemd/: voxi.service
worker/: pyproject.toml  requirements.txt
worker/tests/: test_asr.py  test_cleanup.py  test_health.py  test_protocol.py  test_real_smoke.py  test_server.py
worker/voxi_worker/: __init__.py  asr.py  cleanup.py  health.py  protocol.py  server.py
worker/voxi_worker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
